--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "frontend",
   "version": "0.0.1",
-  "description": "A Quasar Framework app",
-  "productName": "Quasar App",
+  "description": "A voting system for Owensfield participants",
+  "productName": "Owensfield voting system",
   "author": "Owensfield",
   "private": true,
   "scripts": {
